--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;1,500&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="header-footer-logo"
+          ><span class="header-footer-logo-part">Web</span>Studio</a
+        >
+        <ul class="nav">
           <li>
-            <a href="">Studio</a>
+            <a href="" class="nav-active-studio">Studio</a>
           </li>
           <li>
             <a href="">Portfolio</a>
@@ -21,7 +32,8 @@
           </li>
         </ul>
       </nav>
-      <address>
+
+      <address class="address">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -32,46 +44,52 @@
         </ul>
       </address>
     </header>
+
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section1">
+        <h1 class="section1-title">Effective Solutions for Your Business</h1>
+        <button class="section1-btn" type="button">Order Service</button>
       </section>
+
       <section>
-        <h2>Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section2-title">Strategy</h3>
+            <p class="section2-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
+
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section2-title">Punctuality</h3>
+            <p class="section2-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
+
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section2-title">Diligence</h3>
+            <p class="section2-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
+
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section2-title">Technologies</h3>
+            <p class="section2-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+
+      <section class="section3">
+        <h2 class="section3-title1">Our Team</h2>
+
         <ul>
           <li>
             <img
@@ -80,9 +98,10 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section3-title2">Mark Guerrero</h3>
+            <p class="section3-text">Product Designer</p>
           </li>
+
           <li>
             <img
               src="./images/TomFord.jpg"
@@ -90,9 +109,10 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section3-title2">Tom Ford</h3>
+            <p class="section3-text">Frontend Developer</p>
           </li>
+
           <li>
             <img
               src="./images/CamilaGarcia.jpg"
@@ -100,9 +120,10 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section3-title2">Camila Garcia</h3>
+            <p class="section3-text">Marketing</p>
           </li>
+
           <li>
             <img
               src="./images/DanielWilson.jpg"
@@ -110,15 +131,91 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section3-title2">Daniel Wilson</h3>
+            <p class="section3-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="section4">
+        <h2 class="section4-title1">Our Portfolio</h2>
+
+        <ul>
+          <li>
+            <img
+              src="./images/BankingApp.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="section4-title2">Banking App</h3>
+            <p class="section4-text">App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/CashlessPayment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="section4-title2">Cashless Payment</h3>
+            <p class="section4-text">Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/MeditationApp.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="section4-title2">Meditation App</h3>
+            <p class="section4-text">App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/TaxiService.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3 class="section4-title2">Taxi Service</h3>
+            <p class="section4-text">Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/ScreenIllustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="section4-title2">Screen Illustrations</h3>
+            <p class="section4-text">Design</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/OnlineCourses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="section4-title2">Online Courses</h3>
+            <p class="section4-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+
+    <footer class="footer">
+      <a href="./index.html" class="header-footer-logo"
+        ><span class="header-footer-logo-part">Web</span>Studio</a
+      >
+
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
