--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header class="header">
       <nav>
         <a href="./index.html" class="header-footer-logo"
-          ><span class="header-footer-logo-part">Web</span>Studio</a
+          >Web<span class="header-footer-logo-part">Studio</span></a
         >
         <ul class="nav">
           <li>
-            <a href="" class="nav-active-studio">Studio</a>
+            <a href="./index.html" class="nav-active-studio">Studio</a>
           </li>
           <li>
             <a href="">Portfolio</a>
