--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           >Web<span class="header-footer-logo-part">Studio</span></a
         >
         <ul class="nav">
-          <li>
+          <li class="nav">
             <a href="./index.html" class="nav-active-studio">Studio</a>
           </li>
-          <li>
+          <li class="nav">
             <a href="">Portfolio</a>
           </li>
-          <li>
+          <li class="nav">
             <a href="">Contacts</a>
           </li>
         </ul>
