--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="header-footer-logo"
-        ><span class="header-footer-logo-part">Web</span>Studio</a
+        >Web<span class="header-footer-logo-part">Studio</span></a
       >
 
       <p class="footer-text">
