--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="header-footer-logo"
+        <a href="./index.html" class="header-logo"
           >Web<span class="header-footer-logo-part">Studio</span></a
         >
         <ul>
@@ -213,7 +213,7 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="header-footer-logo"
+      <a href="./index.html" class="footer-logo"
         >Web<span class="header-footer-logo-part">Studio</span></a
       >
 
