--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <nav>
         <a href="./index.html" class="header-logo"
-          >Web<span class="header-footer-logo-part">Studio</span></a
+          >Web<span class="header-logo-part">Studio</span></a
         >
         <ul>
           <li class="nav">
@@ -214,7 +214,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="footer-logo"
-        >Web<span class="header-footer-logo-part">Studio</span></a
+        >Web<span class="footer-logo-part">Studio</span></a
       >
 
       <p class="footer-text">
