--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
           >Web<span class="header-logo-part">Studio</span></a
         >
         <ul>
-          <li class="nav">
-            <a href="./index.html" class="nav-active-studio">Studio</a>
+          <li>
+            <a href="./index.html" class="nav" class="nav-active-studio"
+              >Studio</a
+            >
           </li>
-          <li class="nav">
-            <a href="">Portfolio</a>
+          <li>
+            <a href="" class="nav">Portfolio</a>
           </li>
-          <li class="nav">
-            <a href="">Contacts</a>
+          <li>
+            <a href="" class="nav">Contacts</a>
           </li>
         </ul>
       </nav>
