--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         >
         <ul>
           <li>
-            <a href="./index.html" class="nav" class="nav-active-studio"
-              >Studio</a
-            >
+            <a href="./index.html" class="nav">Studio</a>
           </li>
           <li>
             <a href="" class="nav">Portfolio</a>
