--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="top">
       <nav>
-        <a href="./index.html" class="header-logo"
-          >Web<span class="header-logo-part">Studio</span></a
+        <a href="./index.html" class="top-logo"
+          >Web<span class="top-logo-part">Studio</span></a
         >
         <ul>
           <li>
-            <a href="./index.html" class="nav">Studio</a>
+            <a href="./index.html" class="navigation">Studio</a>
           </li>
           <li>
-            <a href="" class="nav">Portfolio</a>
+            <a href="" class="navigation">Portfolio</a>
           </li>
           <li>
-            <a href="" class="nav">Contacts</a>
+            <a href="" class="navigation">Contacts</a>
           </li>
         </ul>
       </nav>
