--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
 
-      <address>
+      <address class="addrs">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="addr"
