--- a/index.html
+++ b/index.html
@@ -50,40 +50,40 @@
     </header>
 
     <main>
-      <section class="section1">
-        <h1 class="section1-title">Effective Solutions for Your Business</h1>
-        <button class="section1-btn" type="button">Order Service</button>
+      <section class="block1">
+        <h1 class="block1-title">Effective Solutions for Your Business</h1>
+        <button class="block1-btn" type="button">Order Service</button>
       </section>
 
       <section>
         <ul>
           <li>
-            <h3 class="section2-title">Strategy</h3>
-            <p class="section2-text">
+            <h3 class="block2-title">Strategy</h3>
+            <p class="block2-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="section2-title">Punctuality</h3>
-            <p class="section2-text">
+            <h3 class="block2-title">Punctuality</h3>
+            <p class="block2-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="section2-title">Diligence</h3>
-            <p class="section2-text">
+            <h3 class="block2-title">Diligence</h3>
+            <p class="block2-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="section2-title">Technologies</h3>
-            <p class="section2-text">
+            <h3 class="block2-title">Technologies</h3>
+            <p class="block2-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -91,8 +91,8 @@
         </ul>
       </section>
 
-      <section class="section3">
-        <h2 class="section3-title1">Our Team</h2>
+      <section class="block3">
+        <h2 class="block3-title1">Our Team</h2>
 
         <ul>
           <li>
@@ -102,8 +102,8 @@
               width="264"
               height="260"
             />
-            <h3 class="section3-title2">Mark Guerrero</h3>
-            <p class="section3-text">Product Designer</p>
+            <h3 class="block3-title2">Mark Guerrero</h3>
+            <p class="block3-text">Product Designer</p>
           </li>
 
           <li>
@@ -113,8 +113,8 @@
               width="264"
               height="260"
             />
-            <h3 class="section3-title2">Tom Ford</h3>
-            <p class="section3-text">Frontend Developer</p>
+            <h3 class="block3-title2">Tom Ford</h3>
+            <p class="block3-text">Frontend Developer</p>
           </li>
 
           <li>
@@ -124,8 +124,8 @@
               width="264"
               height="260"
             />
-            <h3 class="section3-title2">Camila Garcia</h3>
-            <p class="section3-text">Marketing</p>
+            <h3 class="block3-title2">Camila Garcia</h3>
+            <p class="block3-text">Marketing</p>
           </li>
 
           <li>
@@ -135,14 +135,14 @@
               width="264"
               height="260"
             />
-            <h3 class="section3-title2">Daniel Wilson</h3>
-            <p class="section3-text">UI Designer</p>
+            <h3 class="block3-title2">Daniel Wilson</h3>
+            <p class="block3-text">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section class="section4">
-        <h2 class="section4-title1">Our Portfolio</h2>
+      <section class="block4">
+        <h2 class="block4-title1">Our Portfolio</h2>
 
         <ul>
           <li>
@@ -152,8 +152,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section4-title2">Banking App</h3>
-            <p class="section4-text">App</p>
+            <h3 class="block4-title2">Banking App</h3>
+            <p class="block4-text">App</p>
           </li>
 
           <li>
@@ -163,8 +163,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section4-title2">Cashless Payment</h3>
-            <p class="section4-text">Marketing</p>
+            <h3 class="block4-title2">Cashless Payment</h3>
+            <p class="block4-text">Marketing</p>
           </li>
 
           <li>
@@ -174,8 +174,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section4-title2">Meditation App</h3>
-            <p class="section4-text">App</p>
+            <h3 class="block4-title2">Meditation App</h3>
+            <p class="block4-text">App</p>
           </li>
 
           <li>
@@ -185,8 +185,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section4-title2">Taxi Service</h3>
-            <p class="section4-text">Marketing</p>
+            <h3 class="block4-title2">Taxi Service</h3>
+            <p class="block4-text">Marketing</p>
           </li>
 
           <li>
@@ -196,8 +196,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section4-title2">Screen Illustrations</h3>
-            <p class="section4-text">Design</p>
+            <h3 class="block4-title2">Screen Illustrations</h3>
+            <p class="block4-text">Design</p>
           </li>
 
           <li>
@@ -207,19 +207,19 @@
               width="360"
               height="300"
             />
-            <h3 class="section4-title2">Online Courses</h3>
-            <p class="section4-text">Marketing</p>
+            <h3 class="block4-title2">Online Courses</h3>
+            <p class="block4-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer class="footer">
-      <a href="./index.html" class="footer-logo"
-        >Web<span class="footer-logo-part">Studio</span></a
+    <footer class="bottom">
+      <a href="./index.html" class="bottom-logo"
+        >Web<span class="bottom-logo-part">Studio</span></a
       >
 
-      <p class="footer-text">
+      <p class="bottom-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
