--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </header>
 
     <main>
-      <section class="content1">
-        <h1 class="content1-title">Effective Solutions for Your Business</h1>
-        <button class="content1-btn" type="button">Order Service</button>
+      <section class="con-one">
+        <h1 class="con-one-title">Effective Solutions for Your Business</h1>
+        <button class="con-one-btn" type="button">Order Service</button>
       </section>
 
       <section>
