--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </header>
 
     <main>
-      <section class="a">
-        <h1 class="b">Effective Solutions for Your Business</h1>
-        <button class="c" type="button">Order Service</button>
+      <section class="aaa">
+        <h1 class="bbb">Effective Solutions for Your Business</h1>
+        <button class="ccc" type="button">Order Service</button>
       </section>
 
       <section>
