--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </header>
 
     <main>
-      <section class="aaa">
-        <h1 class="bbb">Effective Solutions for Your Business</h1>
-        <button class="ccc" type="button">Order Service</button>
+      <section class="piece">
+        <h1 class="piece_text">Effective Solutions for Your Business</h1>
+        <button class="piece_button" type="button">Order Service</button>
       </section>
 
       <section>
