--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF_8" />
+    <meta name="viewport" piece="width=device_width, initial_scale=1.0" />
     <title>Web Studio</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern_normalize/3.0.1/modern_normalize.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,8 +19,8 @@
   <body>
     <header class="top">
       <nav>
-        <a href="./index.html" class="top-logo"
-          >Web<span class="top-logo-part">Studio</span></a
+        <a href="./index.html" class="top_logo"
+          >Web<span class="top_logo_part">Studio</span></a
         >
         <ul>
           <li>
@@ -43,7 +43,7 @@
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="addr">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="addr">+11 (000) 111_11_11</a>
           </li>
         </ul>
       </address>
@@ -58,32 +58,32 @@
       <section>
         <ul>
           <li>
-            <h3 class="content2-title">Strategy</h3>
-            <p class="content2-text">
+            <h3 class="piece2_title">Strategy</h3>
+            <p class="piece2_text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="content2-title">Punctuality</h3>
-            <p class="content2-text">
+            <h3 class="piece2_title">Punctuality</h3>
+            <p class="piece2_text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="content2-title">Diligence</h3>
-            <p class="content2-text">
+            <h3 class="piece2_title">Diligence</h3>
+            <p class="piece2_text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="content2-title">Technologies</h3>
-            <p class="content2-text">
+            <h3 class="piece2_title">Technologies</h3>
+            <p class="piece2_text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -91,8 +91,8 @@
         </ul>
       </section>
 
-      <section class="content3">
-        <h2 class="content3-title1">Our Team</h2>
+      <section class="piece3">
+        <h2 class="piece3_title1">Our Team</h2>
 
         <ul>
           <li>
@@ -102,8 +102,8 @@
               width="264"
               height="260"
             />
-            <h3 class="content3-title2">Mark Guerrero</h3>
-            <p class="content3-text">Product Designer</p>
+            <h3 class="piece3_title2">Mark Guerrero</h3>
+            <p class="piece3_text">Product Designer</p>
           </li>
 
           <li>
@@ -113,8 +113,8 @@
               width="264"
               height="260"
             />
-            <h3 class="content3-title2">Tom Ford</h3>
-            <p class="content3-text">Frontend Developer</p>
+            <h3 class="piece3_title2">Tom Ford</h3>
+            <p class="piece3_text">Frontend Developer</p>
           </li>
 
           <li>
@@ -124,8 +124,8 @@
               width="264"
               height="260"
             />
-            <h3 class="content3-title2">Camila Garcia</h3>
-            <p class="content3-text">Marketing</p>
+            <h3 class="piece3_title2">Camila Garcia</h3>
+            <p class="piece3_text">Marketing</p>
           </li>
 
           <li>
@@ -135,14 +135,14 @@
               width="264"
               height="260"
             />
-            <h3 class="content3-title2">Daniel Wilson</h3>
-            <p class="content3-text">UI Designer</p>
+            <h3 class="piece3_title2">Daniel Wilson</h3>
+            <p class="piece3_text">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section class="content4">
-        <h2 class="content4-title1">Our Portfolio</h2>
+      <section class="piece4">
+        <h2 class="piece4_title1">Our Portfolio</h2>
 
         <ul>
           <li>
@@ -152,8 +152,8 @@
               width="360"
               height="300"
             />
-            <h3 class="content">Banking App</h3>
-            <p class="content4-text">App</p>
+            <h3 class="piece">Banking App</h3>
+            <p class="piece4_text">App</p>
           </li>
 
           <li>
@@ -163,8 +163,8 @@
               width="360"
               height="300"
             />
-            <h3 class="content">Cashless Payment</h3>
-            <p class="content4-text">Marketing</p>
+            <h3 class="piece">Cashless Payment</h3>
+            <p class="piece4_text">Marketing</p>
           </li>
 
           <li>
@@ -174,8 +174,8 @@
               width="360"
               height="300"
             />
-            <h3 class="content">Meditation App</h3>
-            <p class="content4-text">App</p>
+            <h3 class="piece">Meditation App</h3>
+            <p class="piece4_text">App</p>
           </li>
 
           <li>
@@ -185,8 +185,8 @@
               width="360"
               height="300"
             />
-            <h3 class="content">Taxi Service</h3>
-            <p class="content4-text">Marketing</p>
+            <h3 class="piece">Taxi Service</h3>
+            <p class="piece4_text">Marketing</p>
           </li>
 
           <li>
@@ -196,8 +196,8 @@
               width="360"
               height="300"
             />
-            <h3 class="content">Screen Illustrations</h3>
-            <p class="content4-text">Design</p>
+            <h3 class="piece">Screen Illustrations</h3>
+            <p class="piece4_text">Design</p>
           </li>
 
           <li>
@@ -207,19 +207,19 @@
               width="360"
               height="300"
             />
-            <h3 class="content">Online Courses</h3>
-            <p class="content4-text">Marketing</p>
+            <h3 class="piece">Online Courses</h3>
+            <p class="piece4_text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="bottom">
-      <a href="./index.html" class="bottom-logo"
-        >Web<span class="bottom-logo-part">Studio</span></a
+      <a href="./index.html" class="bottom_logo"
+        >Web<span class="bottom_logo_part">Studio</span></a
       >
 
-      <p class="bottom-text">
+      <p class="bottom_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
