--- a/index.html
+++ b/index.html
@@ -56,34 +56,35 @@
       </section>
 
       <section>
+        <h2></h2>
         <ul>
           <li>
-            <h3 class="piece2_title">Strategy</h3>
-            <p class="piece2_text">
+            <h3 class="piece_two_title">Strategy</h3>
+            <p class="piece_two_text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="piece2_title">Punctuality</h3>
-            <p class="piece2_text">
+            <h3 class="piece_two_title">Punctuality</h3>
+            <p class="piece_two_text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="piece2_title">Diligence</h3>
-            <p class="piece2_text">
+            <h3 class="piece_two_title">Diligence</h3>
+            <p class="piece_two_text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="piece2_title">Technologies</h3>
-            <p class="piece2_text">
+            <h3 class="piece_two_title">Technologies</h3>
+            <p class="piece_two_text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
