--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </ul>
       </section>
 
-      <section class="piece3">
-        <h2 class="piece3_title1">Our Team</h2>
+      <section class="piece_three">
+        <h2 class="piece_three_title_one">Our Team</h2>
 
         <ul>
           <li>
@@ -103,8 +103,8 @@
               width="264"
               height="260"
             />
-            <h3 class="piece3_title2">Mark Guerrero</h3>
-            <p class="piece3_text">Product Designer</p>
+            <h3 class="piece_three_title_two">Mark Guerrero</h3>
+            <p class="piece_three_text">Product Designer</p>
           </li>
 
           <li>
@@ -114,8 +114,8 @@
               width="264"
               height="260"
             />
-            <h3 class="piece3_title2">Tom Ford</h3>
-            <p class="piece3_text">Frontend Developer</p>
+            <h3 class="piece_three_title_two">Tom Ford</h3>
+            <p class="piece_three_text">Frontend Developer</p>
           </li>
 
           <li>
@@ -125,8 +125,8 @@
               width="264"
               height="260"
             />
-            <h3 class="piece3_title2">Camila Garcia</h3>
-            <p class="piece3_text">Marketing</p>
+            <h3 class="piece_three_title_two">Camila Garcia</h3>
+            <p class="piece_three_text">Marketing</p>
           </li>
 
           <li>
@@ -136,14 +136,14 @@
               width="264"
               height="260"
             />
-            <h3 class="piece3_title2">Daniel Wilson</h3>
-            <p class="piece3_text">UI Designer</p>
+            <h3 class="piece_three_title_two">Daniel Wilson</h3>
+            <p class="piece_three_text">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section class="piece4">
-        <h2 class="piece4_title1">Our Portfolio</h2>
+      <section>
+        <h2 class="piece_four_title_one">Our Portfolio</h2>
 
         <ul>
           <li>
@@ -153,8 +153,8 @@
               width="360"
               height="300"
             />
-            <h3 class="piece">Banking App</h3>
-            <p class="piece4_text">App</p>
+            <h3 class="piece_four_title_two">Banking App</h3>
+            <p class="piece_four_text">App</p>
           </li>
 
           <li>
@@ -164,8 +164,8 @@
               width="360"
               height="300"
             />
-            <h3 class="piece">Cashless Payment</h3>
-            <p class="piece4_text">Marketing</p>
+            <h3 class="piece_four_title_two">Cashless Payment</h3>
+            <p class="piece_four_text">Marketing</p>
           </li>
 
           <li>
@@ -175,8 +175,8 @@
               width="360"
               height="300"
             />
-            <h3 class="piece">Meditation App</h3>
-            <p class="piece4_text">App</p>
+            <h3 class="piece_four_title_two">Meditation App</h3>
+            <p class="piece_four_text">App</p>
           </li>
 
           <li>
@@ -186,8 +186,8 @@
               width="360"
               height="300"
             />
-            <h3 class="piece">Taxi Service</h3>
-            <p class="piece4_text">Marketing</p>
+            <h3 class="piece_four_title_two">Taxi Service</h3>
+            <p class="piece_four_text">Marketing</p>
           </li>
 
           <li>
@@ -197,8 +197,8 @@
               width="360"
               height="300"
             />
-            <h3 class="piece">Screen Illustrations</h3>
-            <p class="piece4_text">Design</p>
+            <h3 class="piece_four_title_two">Screen Illustrations</h3>
+            <p class="piece_four_textt">Design</p>
           </li>
 
           <li>
@@ -208,8 +208,8 @@
               width="360"
               height="300"
             />
-            <h3 class="piece">Online Courses</h3>
-            <p class="piece4_text">Marketing</p>
+            <h3 class="piece_four_title_two">Online Courses</h3>
+            <p class="piece_four_text">Marketing</p>
           </li>
         </ul>
       </section>
