--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </section>
 
       <section>
-        <h2></h2>
+        <h2 class="piece_two_title"></h2>
         <ul>
           <li>
             <h3 class="piece_two_title">Strategy</h3>
