--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2 class="piece_three_title_one">Our Team</h2>
 
         <ul>
-          <li>
+          <li class="piece_three_group">
             <img
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
@@ -107,7 +107,7 @@
             <p class="piece_three_text">Product Designer</p>
           </li>
 
-          <li>
+          <li class="piece_three_group">
             <img
               src="./images/TomFord.jpg"
               alt="Tom Ford"
@@ -118,7 +118,7 @@
             <p class="piece_three_text">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="piece_three_group">
             <img
               src="./images/CamilaGarcia.jpg"
               alt="Camila Garcia"
@@ -129,7 +129,7 @@
             <p class="piece_three_text">Marketing</p>
           </li>
 
-          <li>
+          <li class="piece_three_group">
             <img
               src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
