--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               height="300"
             />
             <h3 class="piece_four_title_two">Screen Illustrations</h3>
-            <p class="piece_four_textt">Design</p>
+            <p class="piece_four_text">Design</p>
           </li>
 
           <li>
